syntax = "proto3";
option go_package = "pkg/cluster/messages";


message GossipMessageEnvelope {
    string srcId = 1;
    string answerPort = 2;
    string traceparent = 3; // W3C Trace Context traceparent header for distributed tracing
}

message GossipMessage {
    GossipMessageEnvelope envelope = 1;
    oneof message {
        GossipHeartbeatMessage heartbeat_message = 2;
        GossipDiffMessage gossip_diff_message = 3;
        GossipDeltaMessage gossip_delta_message = 4;
    }
}

message GossipHeartbeatMessage {
    int64 ts_unix_nano = 1;
    map<string, DigestEntry> version_map_digest = 2;
}

message GossipDiffMessage {
    map<string, GossipVersionedState> state_delta = 1;
    map<string, DigestEntry> version_map_digest = 2;
}

message GossipDeltaMessage {
    map<string, GossipVersionedState> state_delta = 1;
}

message GossipVersionedState {
    DigestEntry digest_entry = 1;
    bytes data = 2;
}

message DigestEntry {
    uint64 version = 1;
    string address = 2;
    int64 last_seen_unix_nano = 3;
}
